# strands_3d_mapping

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  convex_voxel_segmentation.cpp  convex_voxel_segmentation.h  package.xml  register_objects.cpp  register_objects.h  segment_features.cpp  segment_features.h  segment_voxel_kinect.cpp  test_metric_map.cpp  test_registration.cpp
MetaroomXMLParser/: CMakeLists.txt
MetaroomXMLParser/src/: loadMultipleFilesMain.cpp  loadSingleFileMain.cpp  simpleSummaryParser.cpp
benchmark/: CMakeLists.txt  package.xml
benchmark/src/: benchmark_incremental_segmentation.cpp  benchmark_overlap.cpp  benchmark_query_vocabulary.cpp  benchmark_result.cpp  benchmark_retrieval.cpp  benchmark_segmentation.cpp  benchmark_visualization.cpp  surfel_renderer.cpp
benchmark/test/: test_query_annotated_sweep.cpp  test_renderer.cpp  test_results_image.cpp  test_static_matching.cpp  test_visualize_query.cpp
calibrate_sweeps/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
calibrate_sweeps/action/: CalibrateSweeps.action
calibrate_sweeps/src/: calibrate_sweep_action_server.cpp
cloud_merge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cloud_merge/action/: Sweep.action
cloud_merge/include/: cloud_merge.h  cloud_merge_node.h  mongodb_interface.h  noise_approximate_voxel_grid.h
cloud_merge/launch/: cloud_merge.launch  mapping.launch
cloud_merge/scripts/: do_sweep.py
cloud_merge/src/: cloud_merge.cpp  cloud_merge_node.cpp  main.cpp  mongodb_interface.cpp
cloud_register/: CMakeLists.txt  package.xml
cloud_register/include/: cloud_register.h  ndt.h  ndtRegistration.h  voxel_grid_covariance.h  voxel_grid_covariance.hpp
cloud_register/src/: cloud_register.cpp  ndt.cpp  ndt_intermediate_cloud_main.cpp  ndt_main.cpp  voxel_grid_covariance.cpp
comparisons/: CMakeLists.txt
comparisons/src/: benchmark_query_esf.cpp  benchmark_query_vlad.cpp  bow_representation.cpp  common.cpp  test_query.cpp  test_show_sweeps.cpp  vlad_representation.cpp
ekz-public-lib/: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml
ekz-public-lib/bow/: bow_base_0.orb  bow_base_0.surf128  bow_base_1.orb  bow_base_1.surf128  bow_base_10.orb  bow_base_10.surf128  bow_base_100.orb  bow_base_100.surf128  bow_base_101.orb  bow_base_101.surf128  bow_base_102.orb  bow_base_102.surf128  bow_base_103.orb  bow_base_103.surf128  bow_base_104.orb  bow_base_104.surf128  bow_base_105.orb  bow_base_105.surf128  bow_base_106.orb  bow_base_106.surf128  bow_base_107.orb  bow_base_107.surf128  bow_base_108.orb  bow_base_108.surf128  bow_base_109.orb  bow_base_109.surf128  bow_base_11.orb  bow_base_11.surf128  bow_base_110.orb  bow_base_110.surf128  bow_base_111.orb  bow_base_111.surf128  bow_base_112.orb  bow_base_112.surf128  bow_base_113.orb  bow_base_113.surf128  bow_base_114.orb  bow_base_114.surf128  bow_base_115.orb  bow_base_115.surf128  (+960 more)
ekz-public-lib/include/: ekz.h
k_means_tree/: CMakeLists.txt  README.md
k_means_tree/impl/: grouped_vocabulary_tree.hpp  k_means_tree.hpp  reweighted_vocabulary_tree.hpp  vocabulary_tree.hpp
k_means_tree/src/: k_means_tree.cpp  reweighted_vocabulary_tree.cpp  test.cpp  test_vocabulary_tree.cpp  vocabulary_tree.cpp
learn_objects_action/: CMakeLists.txt  README.md  package.xml  setup.py
learn_objects_action/action/: LearnObject.action
learn_objects_action/launch/: learn_objects_dependencies.launch
learn_objects_action/scripts/: call_action_server.py  server.py  server_y3.py
metaroom_xml_parser/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
metaroom_xml_parser/apps/: load_labelled_data.cpp  print_objects_with_views.cpp  print_sweep_xmls.cpp  print_sweep_xmls_at_waypoint.cpp  test_dynamic_object_parser.cpp
metaroom_xml_parser/include/: load_utilities.h  load_utilities.hpp  simpleSummaryParser.h  simpleXMLparser.h  simple_summary_parser.h  simple_xml_parser.h
metaroom_xml_parser/src/: loadMultipleFilesMain.cpp  loadSingleFileMain.cpp  load_additional_views_main.cpp  load_labelled_data.cpp  load_multiple_files_main.cpp  load_single_file_main.cpp  load_utilities.cpp  load_utilities_main.cpp  simpleSummaryParser.cpp  simpleXMLparser.cpp  simple_dynamic_object_parser.cpp  simple_summary_parser.cpp  simple_xml_parser.cpp  test_dynamic_object_parser.cpp
nbv_planning/: CMakeLists.txt  README.md  notes.rst  package.xml
nbv_planning/scripts/: capture_some_clouds.py  test_rays.py
nbv_planning/src/: NBVFinder.cpp  NBVFinderROS.cpp  Ray.cpp  SensorModel.cpp  TargetVolume.cpp  nbv_planner_pcds.cpp  nbv_planner_server.cpp  test_model.cpp
nbv_planning/srv/: SelectNextView.srv  SetTarget.srv  SetViews.srv  Update.srv
nbv_planning/test_files/: out.yaml  views.yaml
object_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
object_manager/include/: dynamic_object.h  dynamic_object_mongodb_interface.h  dynamic_object_utilities.h  dynamic_object_xml_parser.h  object_manager.h
object_manager/msg/: DynamicObjectTrackingData.msg  DynamicObjectTracks.msg
object_manager/src/: dynamic_object.cpp  dynamic_object_compute_mask_server.cpp  dynamic_object_mongodb_interface.cpp  dynamic_object_utilities.cpp  dynamic_object_xml_parser.cpp  load_objects_from_mongo.cpp  object_manager.cpp  object_manager_main.cpp
object_manager/srv/: DynamicObjectComputeMaskService.srv  DynamicObjectsService.srv  GetDynamicObjectService.srv  ProcessDynamicObjectService.srv
object_view_generator/: CMakeLists.txt  README.md  package.xml
object_view_generator/scripts/: test_with_rviz.py  view_points_service.py
object_view_generator/srv/: GetTrajectoryPoints.srv
quasimodo_brain/: CMakeLists.txt  CMakeLists.txt~  package.xml
quasimodo_brain/launch/: brain.launch  modelserver.launch  robot_listener.launch
quasimodo_models/: CMakeLists.txt  CMakeLists.txt~  package.xml
quasimodo_msgs/: CMakeLists.txt  package.xml
retrieval_processing/: CMakeLists.txt  package.xml
scitos_ptu_sweep/: CHANGELOG.rst  CMakeLists.txt  package.xml
semantic_map/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
(+851 files in other folders)
