<?xml version="1.0"?>
<package>
	<name>strands_room</name>
	<version>0.0.0</version>
	<description>The strands_room package</description>

	<maintainer email="ekz@kth.se">Johan Ekekrantz</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>libg2o</build_depend>
	<build_depend>pcl</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend> qt_build</build_depend>
	<run_depend> qt_build</run_depend>
	<run_depend>libg2o</run_depend>
	<run_depend>pcl</run_depend>
	<run_depend>pcl_ros</run_depend>
	<export>
	</export>
</package>
