<?xml version="1.0"?>
<package>
  <name>calibrate_sweeps</name>
  <version>0.0.12</version>
  <description>The calibrate_sweeps publisher package</description>

  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>qt_ros</build_depend>  
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>semantic_map</build_depend>
  <build_depend>metaroom_xml_parser</build_depend>
  <build_depend>strands_sweep_registration</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libpcl-all</run_depend>    
  <run_depend>semantic_map</run_depend>
  <run_depend>metaroom_xml_parser</run_depend>
  <run_depend>strands_sweep_registration</run_depend>
  <run_depend> libceres-dev</run_depend>
  <run_depend> suitesparse</run_depend>
  <run_depend> qt_build</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend> image_geometry</run_depend>
  <run_depend> cpp_common</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
